UtahLiveDataTest/src/objects/r_pgrp__c.object
<CustomObject>
    <fields>
        <fullName>ACT_FL__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Active</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALW_BUD_FL__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Budgeting</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DEPT_CD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department Code</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FINET Program Groups</relationshipLabel>
        <relationshipName>FINET_Program_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EFBGN_DT__c</fullName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EFEND_DT__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalFINETId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>PGRP_CD+DEPT_CD</description>
        <externalId>true</externalId>
        <label>ExternalFINETId</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PGRP_CD__c</fullName>
        <label>Program Group Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PGRP_DSCR__c</fullName>
        <label>Program Group Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PGRP_NM__c</fullName>
        <label>Program Group Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PGRP_SH_NM__c</fullName>
        <label>Program Group Short Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>FINET Program Group</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Program Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FINET Program Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>